# obiya-examples

./: .gitignore  INSTALL.md  README.md
examples/code-review/: .coveragerc  .gitignore  ERROR-REPORT.md  README.md  email-fix.md  jest.config.js  motia-workbench.json  package.json  pyproject.toml  tsconfig.json
examples/code-review/.cursor/rules/: api-step-guide.mdc  common-pitfalls-guide.mdc  cron-step-guide.mdc  cursor-motia-guide.mdc  deployment-guide.mdc  error-handling-guide.mdc  event-step-guide.mdc  flow-design-guide.mdc  integration-patterns-guide.mdc  logging-debugging-guide.mdc  motia-framework-overview.mdc  noop-step-guide.mdc  project-structure-guide.mdc  state-management-guide.mdc  step-implementation-guide.mdc  testing-guide.mdc  topic-and-event-guide.mdc  ui-step-guide.mdc
examples/code-review/doc/: plan.project-setup.md
examples/code-review/scripts/: cli-review.js  cli.js  run-standalone-review.js  setup_python_env.sh  test-review.js
examples/code-review/steps/code-review/: backPropogate.step.test.ts  backPropogate.step.ts  controller.step.test.ts  controller.step.ts  controller_step.py  errorHandler.step.ts  expandNode.step.ts  integration.localdev.test.ts  markdownReport.step.ts  reviewRequest.api.step.test.ts  reviewRequest.api.step.ts  selectBestMove.step.ts  selectNode.step.ts  simulate.step.test.ts  simulate.step.ts
examples/code-review/steps/code_review/: __init__.py  backPropogate.step.test.ts  backPropogate.step.ts  controller.py  controller.step.py  controller.step.test.ts  controller_step.py  controller_step_test.py  controller_test.py  (+23 more)
(+406 files in other folders)
