[project]
name = "motia-code-review"
version = "0.1.0"
description = "Code review agent using Motia and Agno"
requires-python = ">=3.9"
dependencies = [
    "agno>=0.1.0",
    "anthropic>=0.8.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["*_test.py"]
testpaths = ["steps"]
pythonpath = ["."]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["steps"] 